# autland-test

./: .gitignore  LICENSE  Makefile  README.md  crontab  pyproject.toml  requirements.txt  tobetested.py
backend/apps/chains/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/delegators/: apps.py  urls.py  utils.py  views.py
backend/apps/staking/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/user/: authentication.py  models.py  permissions.py  views.py
backend/apps/validators/: apps.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
backend/core/: asgi.py  urls.py
backend/core/settings/: __init__.py  base.py  custom.py  docker.py  envvars.py
backend/general/utils/: collections.py  cron.py  cryptography.py  types.py
frontend/: .gitignore  Dockerfile  config.ts  exemple.env.local  middleware.js  package-lock.json  package.json
frontend/app/(dashboard)/: layout.jsx  page.jsx
frontend/app/delegators/: columns.jsx  main-layout.jsx  page.jsx
frontend/app/not-ready/: page.jsx
frontend/app/validators/: columns copy.jsx  columns.jsx  layout.jsx  main-layout.jsx  page.jsx  (+3 more)
frontend/components/: Modal.js  account.jsx  chain-selector.jsx  copy-to-clipboard.jsx  data-table-pagination.jsx  data-table.jsx  links.jsx  not-ready-modal.jsx  useDebouncedSearch.jsx  wallet-options.jsx
frontend/config/: axios.config.js  menus.js  site.js  thems.js
frontend/provider/: providers.jsx
frontend/src/: Web3Provider.js
frontend/store/: index.js
scripts/: entrypoint.sh  production_data.py
(+55 files in other folders)
